gccida/g1/recog_5
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/insn-recog.c:6008:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/insn-recog.c:6009:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v10 = (  struct rtx_def *)x0[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/insn-recog.c:6012:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v10; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/insn-recog.c:6019:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/insn-recog.c:6020:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v11 = (  struct rtx_def *)x0[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/insn-recog.c:6023:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v11; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/insn-recog.c:6033:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v11 = (  struct rtx_def *)x0[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/insn-recog.c:6037:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v11; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/insn-recog.c:6057:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/insn-recog.c:6058:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v13 = ( __int16 *)x0[1]; 
                  ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/insn-recog.c:6067:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v21; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/insn-recog.c:6077:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v13 = ( __int16 *)x0[1]; 
                  ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/insn-recog.c:6085:30: error: expected ')'
if ( register_operand( ( rtx)v19, VOIDmode) ) 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/insn-recog.c:6085:22: note: to match this '('
if ( register_operand( ( rtx)v19, VOIDmode) ) 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/insn-recog.c:6087:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v19; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/insn-recog.c:6087:33: error: expected ';' after expression
recog_data_0.operand[1] = ( rtx)v19; 
                                ^
                                ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/insn-recog.c:6091:10: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( mode_class_0[v20] & 0xFFFFFFFB) == 2 || mode_class_0[v20] == MODE_VECTOR_FLOAT) 
         ^~~~~~~~~~~~
         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/insn-recog.c:6091:50: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( ( mode_class_0[v20] & 0xFFFFFFFB) == 2 || mode_class_0[v20] == MODE_VECTOR_FLOAT) 
                                                 ^~~~~~~~~~~~
                                                 mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/insn-recog.c:6101:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v13 = ( __int16 *)x0[1]; 
                  ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/insn-recog.c:6124:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v28; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_5/src/obj/insn-recog.o] Error 1
